src/tests/snapshots/amber__tests__translating__iter_loop_range_optimized_static.ab.snap
---
source: src/tests/translating.rs
expression: ast
---
echo "From 0 to 5"
for (( i_0=0; i_0 < 5; i_0++ )); do
    echo "${i_0}"
done
echo "From 5 to 0"
for (( j_1=5; j_1 > 0; j_1-- )); do
    echo "${j_1}"
done
echo "From 0 to 0"
echo "From 5 to 5"
echo "From 5 to =5"
for (( m_4=5; m_4 <= 5; m_4++ )); do
    echo "${m_4}"
done
echo "From 5 to =0"
for (( n_5=5; n_5 >= 0; n_5-- )); do
    echo "${n_5}"
done
